--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.1",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.17.7",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.427.0",
@@ -45,6 +44,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-quill": "^2.0.0",
     "react-rating": "^2.0.5",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
@@ -52,6 +52,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
